@@ -11,7 +11,7 @@ define( function( require ) {
   'use strict';
 
   // imports
-  var ABSwitch = require( 'PH_SCALE/common/view/ABSwitch' );
+  var ABSwitch = require( 'SUN/ABSwitch' );
   var Dimension2 = require( 'DOT/Dimension2' );
   var ExpandCollapseBar = require( 'PH_SCALE/common/view/ExpandCollapseBar' );
   var GraphUnits = require( 'PH_SCALE/common/view/graph/GraphUnits' );
